[gd_scene load_steps=3 format=3 uid="uid://d07gehvike451"]

[ext_resource type="FontFile" uid="uid://cy78lh4v8c60w" path="res://monogram/ttf/monogram.ttf" id="1_3ia4f"]
[ext_resource type="Script" uid="uid://04fcvlohc461" path="res://scripts/loser_pop_up.gd" id="1_u8yvq"]

[node name="LoserPopUp" type="CanvasLayer"]
visible = false
script = ExtResource("1_u8yvq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.50980395)
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 238.0
offset_right = 1280.0
offset_bottom = 720.0
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OPTION 1"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OPTION 1"

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OPTION 1"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OPTION 1"

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_right = -92.0
offset_bottom = 29.0
grow_horizontal = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_3ia4f")
text = "You Lost :( 
Pick a power-up"
horizontal_alignment = 1
